--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: fullstack-service
 spec:
   type: NodePort
   selector:
-    app: my-app
+    app: fullstack-app
   ports:
-    - port: 80
+    - name: backend
+      port: 80
+      targetPort: 5000
+      nodePort: 30017
+    - name: frontend
+      port: 81
       targetPort: 3000
-      nodePort: 30007
+      nodePort: 30018
